objects/BusinessSpecificInformation__c.object
<CustomObject>
    <fields>
        <fullName>AutomationCostBids__c</fullName>
        <label>Automation Costs / Bids</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AutomationLead__c</fullName>
        <label>Automation Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BSIForecastCategory__c</fullName>
        <inlineHelpText>BSI Forecast Category</inlineHelpText>
        <label>BSI Forecast Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Upside</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BidComplexity__c</fullName>
        <description>November2013</description>
        <inlineHelpText>Select estimated proposal effort level to address this opportunity.</inlineHelpText>
        <label>Bid complexity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Level 1</fullName>
                </value>
                <value>
                    <fullName>Level 2</fullName>
                </value>
                <value>
                    <fullName>Level 3</fullName>
                </value>
                <value>
                    <fullName>Level 4</fullName>
                </value>
                <value>
                    <fullName>Level 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BusinessSpecInf_VIPIcon__c</fullName>
        <formula>Opportunity__r.Account.Account_VIPIcon__c</formula>
        <label>&lt;VIPIcon&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSM__c</fullName>
        <label>CSM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClassOfOffice__c</fullName>
        <inlineHelpText>“Class A”: prestigious buildings for premier office users, with high-quality finishes and rents above average for the area. “Class B”: buildings with rents in the average range. “Class C”: for tenants requiring a functional space and rents below average</inlineHelpText>
        <label>Class of Office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Class A</fullName>
                </value>
                <value>
                    <fullName>Class B</fullName>
                </value>
                <value>
                    <fullName>Class C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientScopingCommitmentMeetingDate__c</fullName>
        <inlineHelpText>PDE Responsible for Entering / Updating Date</inlineHelpText>
        <label>Client Scoping Commitment Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ClientScopingCommitmentMeeting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Scoping Commitment Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CompetitiveSingleSourceOpportunity__c</fullName>
        <formula>IF(Opportunity__r.TECH_HasCompetitorsRollup__c  &gt; 0 , &quot;Competitive&quot;, &quot;Single Source&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitive / Single Source Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionManager__c</fullName>
        <label>Construction Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerApplication__c</fullName>
        <description>ITD values changed</description>
        <label>Environment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aquarium</fullName>
                </value>
                <value>
                    <fullName>Cable Telephony</fullName>
                </value>
                <value>
                    <fullName>CDN &amp; SI</fullName>
                </value>
                <value>
                    <fullName>Colocation: Large</fullName>
                </value>
                <value>
                    <fullName>Colocation: Medium &amp; Regional</fullName>
                    <label>Colocation: Small &amp; Medium</label>
                </value>
                <value>
                    <fullName>Diagnostics &amp; Medical Imaging</fullName>
                </value>
                <value>
                    <fullName>Residential</fullName>
                    <label>Digital Home</label>
                </value>
                <value>
                    <fullName>Disaster Recovery/Biz Cont</fullName>
                </value>
                <value>
                    <fullName>Facility Systems</fullName>
                </value>
                <value>
                    <fullName>Fiber to the Home (FTTH)</fullName>
                </value>
                <value>
                    <fullName>Grid Computing</fullName>
                </value>
                <value>
                    <fullName>Heavy Industrial</fullName>
                </value>
                <value>
                    <fullName>High Density Apps (Blade)</fullName>
                </value>
                <value>
                    <fullName>Home Networking</fullName>
                </value>
                <value>
                    <fullName>Home Theater - A/V, Tivo</fullName>
                </value>
                <value>
                    <fullName>Industrial Computers</fullName>
                </value>
                <value>
                    <fullName>Industrial IoT</fullName>
                </value>
                <value>
                    <fullName>Internet Giants</fullName>
                </value>
                <value>
                    <fullName>Internetworking(LAN/WAN)</fullName>
                </value>
                <value>
                    <fullName>Light Industrial</fullName>
                </value>
                <value>
                    <fullName>Local Edge (Branch)</fullName>
                </value>
                <value>
                    <fullName>Local Edge (SMB)</fullName>
                </value>
                <value>
                    <fullName>Military/Ruggedized</fullName>
                </value>
                <value>
                    <fullName>Mobile Edge</fullName>
                </value>
                <value>
                    <fullName>New Build</fullName>
                </value>
                <value>
                    <fullName>Modernization</fullName>
                </value>
                <value>
                    <fullName>C&amp;I General Purpose</fullName>
                </value>
                <value>
                    <fullName>Industrial Edge</fullName>
                </value>
                <value>
                    <fullName>Commercial Edge (Local Edge Branch&amp; SMB)</fullName>
                </value>
                <value>
                    <fullName>Telco Edge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerEnvironment__c</fullName>
        <label>Deployment Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&gt;5MW (Hyperscale)</fullName>
                </value>
                <value>
                    <fullName>&gt;1MW (Large)</fullName>
                </value>
                <value>
                    <fullName>0.5-1MW (Medium)</fullName>
                    <label>0.25-1MW (Medium)</label>
                </value>
                <value>
                    <fullName>100-500kW, 0.1-0.5MW (Small or Prefab 100-500kW)</fullName>
                    <label>100-250kW, 0.1-0.25MW (Small)</label>
                </value>
                <value>
                    <fullName>50kW-100kW (Server Room/Prefab)</fullName>
                    <label>50-100kW</label>
                </value>
                <value>
                    <fullName>10-50kW (Server Closet/All-in-one MicroDC)</fullName>
                    <label>10-50kW</label>
                </value>
                <value>
                    <fullName>1-10kW (Network Closet)</fullName>
                    <label>1-10kW</label>
                </value>
                <value>
                    <fullName>&lt;1 kW (Standalone)</fullName>
                    <label>&lt;1kW</label>
                </value>
                <value>
                    <fullName>Business Desktop</fullName>
                </value>
                <value>
                    <fullName>Co-Location</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Higher Education</fullName>
                </value>
                <value>
                    <fullName>Home/Small Office</fullName>
                </value>
                <value>
                    <fullName>Industrial Control Room</fullName>
                </value>
                <value>
                    <fullName>K-12</fullName>
                </value>
                <value>
                    <fullName>Laptop &amp; Mobile Computing</fullName>
                </value>
                <value>
                    <fullName>Large data center (&gt;100 racks)</fullName>
                </value>
                <value>
                    <fullName>Med data center (20-100 racks)</fullName>
                </value>
                <value>
                    <fullName>Process / factory floor</fullName>
                </value>
                <value>
                    <fullName>Retail Location</fullName>
                </value>
                <value>
                    <fullName>Server room (3-5 racks)</fullName>
                </value>
                <value>
                    <fullName>Small data center (5-20 racks)</fullName>
                </value>
                <value>
                    <fullName>State and Local</fullName>
                </value>
                <value>
                    <fullName>Wiring closet (1-3 racks)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DWSStatus__c</fullName>
        <inlineHelpText>Deal Winning Session</inlineHelpText>
        <label>DWS Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DoesThisHaveDIACAPRequirement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DoesThisHaveDIACAPRequirement</description>
        <label>Does This Have DIACAP Requirement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>E360__c</fullName>
        <defaultValue>false</defaultValue>
        <description>March2013</description>
        <label>E360</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECCLead__c</fullName>
        <label>ECC Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESStage__c</fullName>
        <inlineHelpText>This is the Energy Solution stages which are different than the Opportunity Stages</inlineHelpText>
        <label>ES Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Workshop</fullName>
                </value>
                <value>
                    <fullName>Prelim in Process</fullName>
                </value>
                <value>
                    <fullName>Prelim Done</fullName>
                </value>
                <value>
                    <fullName>RFP/Q Planned</fullName>
                </value>
                <value>
                    <fullName>RFP/Q Bidding</fullName>
                </value>
                <value>
                    <fullName>RFP/Q Bid</fullName>
                </value>
                <value>
                    <fullName>SE Selected</fullName>
                </value>
                <value>
                    <fullName>IGA Signed</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
                <value>
                    <fullName>Closed – SE not involved</fullName>
                </value>
                <value>
                    <fullName>SE Abandoned</fullName>
                </value>
                <value>
                    <fullName>Client Abandoned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ElectricalLead__c</fullName>
        <label>Electrical Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndUsertoEPCAwardDate__c</fullName>
        <label>End-User to EPC Award Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EnergyLead__c</fullName>
        <label>Energy Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EngineeredFor__c</fullName>
        <label>Engineered For</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Branch</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EstimatedPursuitValue__c</fullName>
        <label>Estimated Pursuit Value (USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EstimatedSalesProposalCost__c</fullName>
        <inlineHelpText>Estimated Sales &amp; Proposal cost for this opportunity</inlineHelpText>
        <label>Estimated Sales &amp; Proposal Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExpectedRevenue__c</fullName>
        <formula>Opportunity__r.Probability  *  Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinancialAspects__c</fullName>
        <description>March2013</description>
        <label>Financial Aspects</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GlobalMajorProjects__c</fullName>
        <label>Global Major Projects</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GMP: Major Project handled by GMP team</fullName>
                </value>
                <value>
                    <fullName>GMP S: Major Project supported by GMP team</fullName>
                </value>
                <value>
                    <fullName>GMP CAN: Candidate Major Project  to be evaluated</fullName>
                </value>
                <value>
                    <fullName>Regional MP: Major Project regionally handled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GoNoGoRanking__c</fullName>
        <inlineHelpText>Go/NoGoRanking is based upon the Go/NoGo template calculation with a possible range of 0.0 to 7.0</inlineHelpText>
        <label>Go/NoGoRanking</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GrowthBoosters__c</fullName>
        <label>Growth Boosters</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Asset Management &amp; Operations</fullName>
                </value>
                <value>
                    <fullName>Demand Management</fullName>
                </value>
                <value>
                    <fullName>Grid Modernization</fullName>
                </value>
                <value>
                    <fullName>Power Generation</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IA_DIACAP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>March2013</description>
        <label>IA/DIACAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IGABudget__c</fullName>
        <label>IGA Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IGAContract__c</fullName>
        <label>IGA Contract</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IGASavings__c</fullName>
        <label>IGA Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IGASignDate__c</fullName>
        <inlineHelpText>Sales Responsible for Entering / Updating Date</inlineHelpText>
        <label>IGA Sign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IGASignedCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IGA Signed – Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IGAVolumeDev__c</fullName>
        <inlineHelpText>Volume that could be selected in BEST that we could propose to the client.</inlineHelpText>
        <label>IGA Volume Dev.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IndustryApplication__c</fullName>
        <label>Industry Application</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AVR</fullName>
                </value>
                <value>
                    <fullName>Batch Digester</fullName>
                </value>
                <value>
                    <fullName>BioFuels</fullName>
                </value>
                <value>
                    <fullName>Boiler</fullName>
                </value>
                <value>
                    <fullName>Burner Management</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Chemical Recovery</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Compressor</fullName>
                </value>
                <value>
                    <fullName>Continous Digester</fullName>
                </value>
                <value>
                    <fullName>Cracker</fullName>
                </value>
                <value>
                    <fullName>Custody Transfer</fullName>
                </value>
                <value>
                    <fullName>Electrical Distribution</fullName>
                </value>
                <value>
                    <fullName>Emergency Shutdown</fullName>
                </value>
                <value>
                    <fullName>Ethylene</fullName>
                </value>
                <value>
                    <fullName>Fire &amp; Gas</fullName>
                </value>
                <value>
                    <fullName>Gas Processing</fullName>
                </value>
                <value>
                    <fullName>Gas to Liquid</fullName>
                </value>
                <value>
                    <fullName>Generator</fullName>
                </value>
                <value>
                    <fullName>Kiln</fullName>
                </value>
                <value>
                    <fullName>Life Sciences</fullName>
                </value>
                <value>
                    <fullName>LNG</fullName>
                </value>
                <value>
                    <fullName>Nuclear</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>Oil Processing</fullName>
                </value>
                <value>
                    <fullName>Oil Production</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Paper Machine</fullName>
                </value>
                <value>
                    <fullName>Power Generation</fullName>
                </value>
                <value>
                    <fullName>Pulp Refining</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsItAChangeOrder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>November2013</description>
        <inlineHelpText>Opportunity developed during the execution of a contract, deriving in increase of scope and sales price.</inlineHelpText>
        <label>Is it a change order?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsItAMustWin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>November2013</description>
        <inlineHelpText>Strategic projects with 1 one or more of the following characteristics: Significant size, Time critical, good chance of win, strategic value to customer and SE, risks are manageable.</inlineHelpText>
        <label>Is it a Must Win?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsItANewProposal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>November2013</description>
        <inlineHelpText>New opportunity with a SE customer.</inlineHelpText>
        <label>Is it a new proposal?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsItBigElephant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>November2013</description>
        <inlineHelpText>Yes if the total amount of the opportunity &gt; 5MEUR and probability &lt;60%.</inlineHelpText>
        <label>Is it a &quot;Big Elephant&quot;?&apos;</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsItRecurrent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>November2013</description>
        <inlineHelpText>Opportunity representing time/geography extension of a maintenance or services contract, without new developments or design.</inlineHelpText>
        <label>Is it recurrent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPASSBeingRisked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is PASS Being Risked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsThereARoadblock__c</fullName>
        <defaultValue>false</defaultValue>
        <description>November2013</description>
        <inlineHelpText>If your opportunity is experiencing a major roadblock please check this box (i.e collaboration issues, Quote Link approval process incomplete for long, etc).</inlineHelpText>
        <label>Is there a roadblock?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KeyComments__c</fullName>
        <label>Key Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LOISignDate__c</fullName>
        <inlineHelpText>Sales Responsible for Entering / Updating Date</inlineHelpText>
        <label>LOI Sign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LOISignedCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LOI Signed - Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LandArea__c</fullName>
        <label>Land area (sq. m)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LegalAspects__c</fullName>
        <description>March2013</description>
        <label>Legal Aspects</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Licensor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Provides licenses to Invensys projects</inlineHelpText>
        <label>Licensor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Business Specific Informations</relationshipLabel>
        <relationshipName>BusinessSpecificInformations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LightingLead__c</fullName>
        <label>Lighting Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MechanicalLead__c</fullName>
        <label>Mechanical Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NoSites__c</fullName>
        <label>No. Sites</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpportunityDriver__c</fullName>
        <description>More of if the partner is leading vs SE rather than the business</description>
        <label>Opportunity Driver</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Scope_Type__c</fullName>
        <defaultValue>&quot;Greenfield&quot;</defaultValue>
        <label>Opportunity Scope Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Greenfield</fullName>
                </value>
                <value>
                    <fullName>Modernization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Business Specific Information</relationshipLabel>
        <relationshipName>Business_Specific_Informations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PABudget__c</fullName>
        <label>PA Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PACompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PA – Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PACompletionDate__c</fullName>
        <inlineHelpText>PDE Responsible for Entering / Updating Date</inlineHelpText>
        <label>PA Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PASavings__c</fullName>
        <label>PA Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PDEPMComments__c</fullName>
        <description>March2013</description>
        <label>PD&amp;E PM Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProjectComments__c</fullName>
        <label>Project Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProjectEngineered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Engineered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectManagementContractor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Management Contractor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Business Specific Informations (Project Management Contractor)</relationshipLabel>
        <relationshipName>BusinessSpecificInformations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectManagerInstall__c</fullName>
        <label>Project Manager - Install</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectManagerPDE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager - PDE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_Specific_Informations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectNumber__c</fullName>
        <description>Critical for integrating systems &amp; processes</description>
        <label>Project Number</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectPowerCapacity__c</fullName>
        <label>Project Power capacity (kVA)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PursuitLeader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pursuit Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BusinessSpecificInformations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PursuitPhase__c</fullName>
        <label>Pursuit Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-Lead (pre-funding)</fullName>
                </value>
                <value>
                    <fullName>1-Feed</fullName>
                </value>
                <value>
                    <fullName>2-EPC Selection</fullName>
                </value>
                <value>
                    <fullName>3-EPC Awarded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RFPQCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RFP/Q – Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RFPQDueDate__c</fullName>
        <inlineHelpText>Sales Responsible for Entering / Updating Date</inlineHelpText>
        <label>RFP/Q Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFPQStartDate__c</fullName>
        <inlineHelpText>Sales Responsible for Entering / Updating Date</inlineHelpText>
        <label>RFP/Q Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFPQStarted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RFP/Q - Started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RedFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Red Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RequestProjectNumber__c</fullName>
        <description>Critical for integrating systems &amp; processes</description>
        <label>Request Project Number</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RevenueStormToolsUploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Revenue Storm Tools Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>S&amp;C - Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCDate__c</fullName>
        <inlineHelpText>PDE Responsible for Entering / Updating Date</inlineHelpText>
        <label>S&amp;C Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SalesCommentsGeneralOpptyComments__c</fullName>
        <description>March2013</description>
        <label>Sales Comments (General Oppty Comments)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SalesManagerComments__c</fullName>
        <description>March2013</description>
        <label>Sales Manager Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ScopeProjectDevelopmentComments__c</fullName>
        <description>March2013</description>
        <label>Scope / Project Development Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>